--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: java
 sudo: false
 script: mvn install
+before_deploy:
+     # Set up git user name and tag this commit
+     - git config --local user.name "tietor"
+     - git config --local user.email "fabio.torti@tie.ch"
+     - export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
+     - git tag $TRAVIS_TAG
 deploy:
   provider: releases
   api_key:
